# esp32c6-boids-sim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.rst  prj.conf  tests.yaml  west.yml
.github/workflows/: build.yml
boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
src/: main.cpp
src/config/: JetConfig.hpp
src/constants/: boids_sim_constants.hpp  constants.hpp
src/core/: rendering.cpp
src/core/rendering/: rendering.cpp  rendering.hpp
src/core/vec3/: vec3.hpp
src/features/boids/: boids.cpp  boids.hpp  boids_renderer.cpp  boids_renderer.hpp  boids_snapshot.cpp  boids_snapshot.hpp  simulation.cpp  simulation.hpp
src/features/boids/classes/: flock.cpp  flock.hpp
src/features/boids/model/: boid.hpp  flock.hpp
src/features/boids/services/: boids_renderer.cpp  boids_renderer.hpp
src/features/boids/store/: render_snapshot_store.cpp  render_snapshot_store.hpp
src/features/boids/types/: boid.hpp  render_snapshot.hpp
src/features/game/: game.cpp  game.hpp
src/features/profiling/: profiling.cpp  profiling.hpp
src/features/rendering/: rendering.cpp  rendering.hpp
src/features/scene/: bounds_outline.cpp  bounds_outline.hpp  scene.cpp  scene.hpp
src/features/simulation/: simulation.cpp  simulation.hpp
